Add Fileset validations and handling

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,7 @@ en:
           attributes:
             runtime:
               not_valid_24h_time: 'Not a valid time format, use HH:MM'
+        fileset:
+          attributes:
+            :include_files:
+              cant_be_blank: "can't be blank"
